--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,3 +20,11 @@ body {
 	font-family: 'Open Sans', serif;
 	margin-left: 25px;
 }
+
+
+
+/* this is for intake form */
+
+.boxed {
+	border: 1px solid black ;
+} 
