--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,11 +15,68 @@ body {
 	background: url(../Images/cascade_mountains.jpg) repeat #f4f2ec;
 	Color: white;
 }
+h1 {
 
+   background-color: none;
+   text-align:center;
+   color:#1F618D;  
+}
+p {
+    color: black;
+}
+/*Main homepage box */
+.boxed {
+ 
+  background: url(sun.jpeg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+    height: 350px;
+    padding: 50px;
+    border: none;
+
+   
+}
+/*footer for Homepage */
+.footer{
+  boder: 5px outset black; 
+  background-color:#2C3E50; 
+  color:white; 
+  
+
+}
 .main-content {
 	font-family: 'Open Sans', serif;
 	margin-left: 25px;
 }
+
+/*button on homepage*/
+.button {
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+position:absolute;
+    bottom: 35%;
+    left:44%; 
+}
+
+
+.button:hover {background-color: #3e8e41}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 
 
 
