--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,7 +25,7 @@ p {
     color: black;
 }
 /*Main homepage box */
-.boxed {
+.mainBox {
  
   background: url(sun.jpeg) no-repeat center center fixed; 
   -webkit-background-size: cover;
