--- a/CSS/thankyou.css
+++ b/CSS/thankyou.css
@@ -57,6 +57,7 @@ p {
   text-align: center;
   color: white;
   font-family: "Open Sans", serif;
+  padding-top: 0.75cm;
 }
 
 /* This is for sticky footer */
