--- a/CSS/thankyou.css
+++ b/CSS/thankyou.css
@@ -56,6 +56,7 @@ p {
   margin-right: auto;
   text-align: center;
   color: white;
+  text-shadow: 2px 2px 4px #000000;
   font-family: "Open Sans", serif;
   padding-top: 0.75cm;
 }
