fixed the button glitch. Fixed #7.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -110,9 +110,10 @@ a.button {
   position: absolute; /*how to position button */
   top: 50%;
   left: 50%;
+/*
   margin-right: -50%;
   transform: translate(-50%, -50%);
-
+*/
 }
 
 
