--- a/CSS/style.css
+++ b/CSS/style.css
@@ -95,7 +95,7 @@ p {
 
 /*button on homepage*/
 a.button {
-  display: inline-block;
+ /* display: inline-block;
   padding: 15px 15px;
   font-size: 24px;
   cursor: pointer;
@@ -106,22 +106,43 @@ a.button {
   background-color: #4CAF50;
   border: none;
   border-radius: 15px;
-  box-shadow: 0 5px #999;
+  box-shadow: 0 5px #006400;
+  position: absolute; /*how to position button 
+  top: 40%;
+  left: 44%;
+*/
+background: #34d981;
+  background-image: -webkit-linear-gradient(top, #34d981, #2bb89c);
+  background-image: -moz-linear-gradient(top, #34d981, #2bb89c);
+  background-image: -ms-linear-gradient(top, #34d981, #2bb89c);
+  background-image: -o-linear-gradient(top, #34d981, #2bb89c);
+  background-image: linear-gradient(to bottom, #34d981, #2bb89c);
+  -webkit-border-radius: 33;
+  -moz-border-radius: 33;
+  border-radius: 33px;
+  text-shadow: 0px 0px 0px #4d18bd;
+  -webkit-box-shadow: 1px 5px 2px #666666;
+  -moz-box-shadow: 1px 5px 2px #666666;
+  box-shadow: 1px 5px 2px #666666;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 18px 10px 20px;
+  text-decoration: none;
   position: absolute; /*how to position button */
   top: 40%;
   left: 44%;
-/*
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
-*/
+
+
 }
 
 
-.button:hover {background-color: #3e8e41}
+.button:hover {background: #3cfc3c;
+  text-decoration: none;}
 
 .button:active {
-  background-color: #3e8e41;
-  box-shadow: 0 5px #666;
+  background-color: #DC143C;/*push color */
+  box-shadow: 0 5px #000000;
   transform: translateY(4px);
 
 
