--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,8 +17,11 @@ html, body {
   height: 100%;
 }
 
+
 .home {
   background: url("../Images/green.jpg") no-repeat center center;
+  max-width:auto;
+  margin: auto;
 }
 
 .logo {
@@ -71,13 +74,6 @@ p {
 }
 /* end of sticky footer */
 
-.topright {
-    position: absolute;
-    top: 35px;
-    right: 50px;
-    font-size: 18px;
-   
-}
 /*footer for Homepage */
 .footer{
   color:white; 
@@ -88,14 +84,25 @@ p {
   border-top:1px solid #c34500;
   font-family: "Open Sans", serif;
 }
+
+
+
+.topright {
+    position: absolute;
+    top: 35px;
+    right: 50px;
+    font-size: 18px;
+   
+}
+
 .main-content {
 	font-family: 'Open Sans', serif;
 	margin-left: 25px;
 }
 
 /*button on homepage*/
-a.button {
- /* display: inline-block;
+.button {
+  display: inline-block;
   padding: 15px 15px;
   font-size: 24px;
   cursor: pointer;
@@ -107,11 +114,9 @@ a.button {
   border: none;
   border-radius: 15px;
   box-shadow: 0 5px #006400;
-  position: absolute; /*how to position button 
-  top: 40%;
-  left: 44%;
-*/
-background: #34d981;
+
+
+  background: #34d981;
   background-image: -webkit-linear-gradient(top, #34d981, #2bb89c);
   background-image: -moz-linear-gradient(top, #34d981, #2bb89c);
   background-image: -ms-linear-gradient(top, #34d981, #2bb89c);
@@ -130,9 +135,8 @@ background: #34d981;
   padding: 10px 18px 10px 20px;
   text-decoration: none;
   position: absolute; /*how to position button */
-  top: 40%;
-  left: 44%;
-
+  top: 35%;
+  left: 40%;
 
 }
 
@@ -140,15 +144,11 @@ background: #34d981;
 .button:hover {background: #3cfc3c;
   text-decoration: none;}
 
-.button:active {
-  background-color: #DC143C;/*push color */
+/*button:active is when you click on the button changes color*/
+.button:active { 
+  background-color: #DC143C;
   box-shadow: 0 5px #000000;
-  transform: translateY(4px);
+  transform: translateY(4px); }
 
 
 
-/* this is for intake form */
-
-.boxed {
-	border: 1px solid black ;
-} 
