Added menu bar. There are no links, not sure how to implement links because everyone's path might be different. I don't know what yong was saying about having a login button in the menu  bar. Since we have a login on the top right of the screen. Fixes #53.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,6 +43,33 @@ p {
   max-width:auto;
   margin: auto;
 }
+/*beginning of nav bar css*/
+.navBar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  } 
+/*aligns text to left*/
+.navBar li {
+    float: left;
+  }
+
+.navBar li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+/*background color when hovering*/
+.navBar li a:hover {
+    background-color: #111;
+  }
+.navBar.active {
+    background-color: #4CAF50;
+  }
 
 /*Main homepage box */
 .mainBox {
@@ -135,7 +162,7 @@ p {
   padding: 10px 18px 10px 20px;
   text-decoration: none;
   position: absolute; /*how to position button */
-  top: 35%;
+  top: 45%;
   left: 40%;
 
 }
