added 10px margin to top of form

--- a/CSS/form.css
+++ b/CSS/form.css
@@ -39,7 +39,7 @@ form {
   background: -webkit-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
   background: -moz-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
   background: linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
-  margin: auto;
+  margin: 10px auto;
   position: relative;
   width: 80%;
   font-family: "Open Sans", sans-serif;
