--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@ a:hover {
 }
 
 html, body {
-	background: url("../Images/green.jpg") no-repeat center center fixed; 
+	background: url("/images/green.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -28,7 +28,7 @@ html, body {
 .banner {
 	margin: 0;
 	height: 100px;
-	background: url(../Images/cascade_mountains.jpg) repeat #f4f2ec;
+	background: url(/images/cascade_mountains.jpg) repeat #f4f2ec;
 }
 
 p {
@@ -50,7 +50,7 @@ p {
     padding: 0;
     overflow: hidden;
     background-color: #333;
-  } 
+  }
 /*aligns text to left*/
 .navBar li {
     float: left;
@@ -79,8 +79,8 @@ p {
   -o-background-size: cover;
   background-size: cover;
   height: 600px;
-  padding: 50px; 
-  margin-top: 10px; 
+  padding: 50px;
+  margin-top: 10px;
   min-height: 450px;
 }
 
@@ -103,11 +103,11 @@ p {
 
 /*footer for Homepage */
 .footer{
-  color:white; 
-  background: url("../Images/treeline.png")repeat-x bottom left #373737;
+  color:white;
+  background: url("/images/treeline.png")repeat-x bottom left #373737;
   color:#ffff;
   padding: 25px 50px 25px 50px;
-  margin-top: 10px; 
+  margin-top: 10px;
   border-top:1px solid #c34500;
   font-family: "Open Sans", serif;
   height: 120px;
@@ -121,7 +121,7 @@ p {
     right: 50px;
     font-size: 18px;
     font-family: "Open Sans", serif;
-   
+
 }
 
 .main-content {
@@ -179,7 +179,7 @@ p {
   text-decoration: none;}
 
 /*button:active is when you click on the button changes color*/
-.button:active { 
+.button:active {
   background-color: #DC143C;
   box-shadow: 0 5px #000000;
   transform: translateY(4px); }
