--- a/CSS/style.css
+++ b/CSS/style.css
@@ -85,7 +85,7 @@ p {
 }
 
 /* this is to style the welcome text */
-.welcome-header, p, h1, h2 {
+.welcome-header p, .welcome-header h1, .welcome-header h2 {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
