Used Role class to list all roles in database. Fixes #94

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -205,6 +205,14 @@ th {
 }
 /* ---- end table style --- */
 
+/* ---- roles table style ---- */
+.list-roles-table th {
+  width: 50%;
+}
+
+/* ---end roles table style ---- */
+
+
 /* style for login page */
 
 
