Fixed session_new.php to properly display the username in the upper right hand corner. Also adjusted some css of demo class

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,9 +37,10 @@ p {
 
 p.demo {
   float: right;
-  background: #9C9;
   color: #FFF;
   padding: 2px;
+  margin-right:10px;
+  font-family: "Open Sans", serif;
 }
 
 .wrapper {
