--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,22 +1,22 @@
 * {
-  margin: 0;
+	margin: 0;
 }
 
 a {
-  color: white;
-  text-decoration: none;
+	color: white;
+	text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+	text-decoration: underline;
 }
 
 html, body {
 	background: url("/images/green.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
 .logo {
@@ -36,21 +36,22 @@ p {
 }
 
 p.demo {
-  float: right;
-  color: #FFF;
-  padding: 2px;
-  margin-right:10px;
-  font-family: "Open Sans", serif;
+	float: right;
+	color: #FFF;
+	padding: 2px;
+	margin-right:10px;
+	font-family: "Open Sans", serif;
 }
 
 .wrapper {
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  margin: 0 auto -120px;
-  max-width:auto;
-  margin: auto;
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0 auto -120px;
+	max-width:auto;
+	margin: auto;
 }
+
 /*beginning of nav bar css*/
 .navBar ul {
     list-style-type: none;
@@ -59,6 +60,7 @@ p.demo {
     overflow: hidden;
     background-color: #333;
   }
+  
 /*aligns text to left*/
 .navBar li {
     float: left;
@@ -72,137 +74,128 @@ p.demo {
     padding: 14px 16px;
     text-decoration: none;
   }
+  
 /*background color when hovering*/
 .navBar li a:hover {
     background-color: #111;
-  }
+}
+
 .navBar.active {
     background-color: #4CAF50;
-  }
+}
 
 /*Main homepage box */
 .mainBox {
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  height: 600px;
-  padding: 50px;
-  margin-top: 10px;
-  min-height: 450px;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	height: 600px;
+	padding: 50px;
+	margin-top: 10px;
+	min-height: 450px;
 }
 
 /* this is to style the welcome text */
 .welcome-header p, .welcome-header h1, .welcome-header h2 {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  color: white;
-  text-shadow: 2px 2px 4px #000000;
-  font-family: "Open Sans", serif;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	color: white;
+	text-shadow: 2px 2px 4px #000000;
+	font-family: "Open Sans", serif;
 }
-
-/*.footer, .mainBox: after {
-  height: 100px;
-}
-*/
-
-/* end of sticky footer */
 
 /*footer for Homepage */
-.footer{
-  color:white;
-  background: url("/images/treeline.png")repeat-x bottom left #373737;
-  color:#ffff;
-  padding: 25px 50px 25px 50px;
-  margin-top: 10px;
-  border-top:1px solid #c34500;
-  font-family: "Open Sans", serif;
-  height: 120px;
+.footer {
+	color:white;
+	background: url("/images/treeline.png")repeat-x bottom left #373737;
+	color:#ffff;
+	padding: 25px 50px 25px 50px;
+	margin-top: 10px;
+	border-top:1px solid #c34500;
+	font-family: "Open Sans", serif;
+	height: 120px;
 }
-
-
-
-
 
 .main-content {
 	font-family: 'Open Sans', serif;
-  background: -webkit-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
-  background: -moz-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
-  background: linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
-  margin: 10px auto;
-  width: 80%;
-  border-radius: 10px;
+	background: -webkit-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
+	background: -moz-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
+	background: linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
+	margin: 10px auto;
+	width: 80%;
+	border-radius: 10px;
 }
 
 /*button on homepage*/
 .button {
-  display: inline-block;
-  padding: 15px 15px;
-  font-size: 24px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  outline: none;
-  color: #fff;
-  background-color: #4CAF50;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 5px #006400;
+	display: inline-block;
+	padding: 15px 15px;
+	font-size: 24px;
+	cursor: pointer;
+	text-align: center;
+	text-decoration: none;
+	outline: none;
+	color: #fff;
+	background-color: #4CAF50;
+	border: none;
+	border-radius: 15px;
+	box-shadow: 0 5px #006400;
 
-
-  background: #34d981;
-  background-image: -webkit-linear-gradient(top, #34d981, #2bb89c);
-  background-image: -moz-linear-gradient(top, #34d981, #2bb89c);
-  background-image: -ms-linear-gradient(top, #34d981, #2bb89c);
-  background-image: -o-linear-gradient(top, #34d981, #2bb89c);
-  background-image: linear-gradient(to bottom, #34d981, #2bb89c);
-  -webkit-border-radius: 33;
-  -moz-border-radius: 33;
-  border-radius: 33px;
-  text-shadow: 0px 0px 0px #4d18bd;
-  -webkit-box-shadow: 1px 5px 2px #666666;
-  -moz-box-shadow: 1px 5px 2px #666666;
-  box-shadow: 1px 5px 2px #666666;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 20px;
-  padding: 10px 18px 10px 20px;
-  text-decoration: none;
-  position: absolute; /*how to position button */
-  top: 45%;
-  left: 40%;
-
+	background: #34d981;
+	background-image: -webkit-linear-gradient(top, #34d981, #2bb89c);
+	background-image: -moz-linear-gradient(top, #34d981, #2bb89c);
+	background-image: -ms-linear-gradient(top, #34d981, #2bb89c);
+	background-image: -o-linear-gradient(top, #34d981, #2bb89c);
+	background-image: linear-gradient(to bottom, #34d981, #2bb89c);
+	-webkit-border-radius: 33;
+	-moz-border-radius: 33;
+	border-radius: 33px;
+	text-shadow: 0px 0px 0px #4d18bd;
+	-webkit-box-shadow: 1px 5px 2px #666666;
+	-moz-box-shadow: 1px 5px 2px #666666;
+	box-shadow: 1px 5px 2px #666666;
+	font-family: Arial;
+	color: #ffffff;
+	font-size: 20px;
+	padding: 10px 18px 10px 20px;
+	text-decoration: none;
+	position: absolute; /*how to position button */
+	top: 45%;
+	left: 40%;
 }
 
-
-.button:hover {background: #3cfc3c;
-  text-decoration: none;}
+.button:hover {
+	background: #3cfc3c;
+	text-decoration: none;
+}
 
 /*button:active is when you click on the button changes color*/
 .button:active {
-  background-color: #DC143C;
-  box-shadow: 0 5px #000000;
-  transform: translateY(4px); }
+	background-color: #DC143C;
+	box-shadow: 0 5px #000000;
+	transform: translateY(4px);
+}
 
 /* table style for listing clients */
 table, th, td {
-  width: 100%;
-  border: 1px solid black;
-  padding: 15px;
+	width: 100%;
+	border: 1px solid black;
+	padding: 15px;
 }
 
 table {
-  border-collapse: collapse;
+	border-collapse: collapse;
 }
 
 th {
-  text-align: left;
+	text-align: left;
 }
 
 .list-table a {
-  color: black;
-  appearance: button;
+	color: black;
+	appearance: button;
 }
 /* ---- end table style --- */
 
@@ -212,15 +205,14 @@ th {
 }
 /* ---end roles table style ---- */
 
-
 .content {
-  background-color: #FCFCFC;
-  margin: 20px;
-  padding: 20px;
-  border: 1px solid #999;
-  font-family: helvetica, arial, sans-serif;
+	background-color: #FCFCFC;
+	margin: 20px;
+	padding: 20px;
+	border: 1px solid #999;
+	font-family: helvetica, arial, sans-serif;
 }
 
 .content h2 {
-  font-weight: normal;
+	font-weight: normal;
 }
